Fix squashed images

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: josh.blog
 Theme URI: https://josh.blog/
 Author: Josh Betz
 Author URI: https://josh.blog/
-Version: 4.0.4
+Version: 4.0.5
 License: GNU General Public License v2 or later
 */
 
@@ -197,6 +197,7 @@ img {
 	max-width: 600px;
 	max-height: 1200px;
 	height: auto;
+	width: auto;
 }
 
 .wp-block-image img {
